<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurveyActivity">

    <ScrollView
        android:id="@+id/scrollSurvey"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        tools:context=".SurveyActivity"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/listFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/labelFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/food"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cuisine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_your_favourite_cuisine"/>

                <RadioGroup
                    android:id="@+id/gpCuisine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/chinese"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/chinese" />

                    <RadioButton
                        android:id="@+id/french"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/french" />

                    <RadioButton
                        android:id="@+id/italian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/italian" />

                    <RadioButton
                        android:id="@+id/indian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/indian" />

                    <RadioButton
                        android:id="@+id/japanese"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/japanese" />

                    <RadioButton
                        android:id="@+id/thai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thai" />

                    <RadioButton
                        android:id="@+id/turkish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/turkish" />
                </RadioGroup>

                <TextView
                    android:id="@+id/eat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_often_do_you_eat_out" />

                <RadioGroup
                    android:id="@+id/gpEat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/never"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/never" />

                    <RadioButton
                        android:id="@+id/rare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rarely" />

                    <RadioButton
                        android:id="@+id/sometimes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sometimes" />

                    <RadioButton
                        android:id="@+id/frequent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frequently" />

                </RadioGroup>

                <TextView
                    android:id="@+id/spicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_prefer_spicy_food" />

                <RadioGroup
                    android:id="@+id/gpSpicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/spicyYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/spicyNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>


                <TextView
                    android:id="@+id/vegan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_prefer_vegetarian_food" />

                <RadioGroup
                    android:id="@+id/gpVegan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/veganYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/veganNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>

                <TextView
                    android:id="@+id/seafood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_like_seafood" />

                <RadioGroup
                    android:id="@+id/gpSeafood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/seaYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/seaNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/listDiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/labelDiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/dietary"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vegetarian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_vegetarian" />

                <RadioGroup
                    android:id="@+id/gpVegetarian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/vegetarianYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/vegetarianNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />
                </RadioGroup>

                <TextView
                    android:id="@+id/organic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_prefer_organic_food" />

                <RadioGroup
                    android:id="@+id/gpOrganic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/organicYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/organicNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>

                <TextView
                    android:id="@+id/diary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_consume_dairy_products" />

                <RadioGroup
                    android:id="@+id/gpDiary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/diaryYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/diaryNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>

                <TextView
                    android:id="@+id/fastFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_eat_fast_food" />

                <RadioGroup
                    android:id="@+id/gpFastFood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/fastFoodYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/fastFoodNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>

                <TextView
                    android:id="@+id/allergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_have_any_food_allergies" />

                <RadioGroup
                    android:id="@+id/gpAllergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/allergyYes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/allergyNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/scrollSurvey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>